# riscv-coretp

./: .flake8  .gitignore  BUILD.bazel  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  check-spdx.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_proposal.md  pull_request_template.md
.github/workflows/: smoke.yml
coretp/: __init__.py  exporter.py  loader.py  models.py  parser.py  step_ir.py
coretp/env/: __init__.py  cfg.py  env.py  predicates.py  solver.py
coretp/export/: __init__.py  base.py  excel.py  formatters.py  pdf.py
coretp/isa/: __init__.py  arch.py  catalog.py  instruction.py  operands.py  registers.py
coretp/isa/instructions/: __init__.py  atomic.py  bitmanip.py  compressed.py  crypto.py  float.py  generate_instructions.py  hypervisor.py  integer.py  misc.py  pseudo.py
coretp/plans/: __init__.py  paging_old.py  scenario_registry.py  test_plan_registry.py
coretp/plans/paging/: __init__.py  page_table_walks.py  paging.py  scenario_registry.py
coretp/plans/sinval/: __init__.py  scenario_registry.py  sinval.py  sinval_scenarios.py
coretp/plans/sscofpmf/: __init__.py  sscofpmf_scenarios.py
coretp/plans/sstateen/: __init__.py  sstateen_scenarios.py
coretp/plans/sstc/: SSTC_TP.xlsx  __init__.py  sstc_scenarios.py
coretp/plans/svadu/: SVADU_TP.xlsx  __init__.py  scenario_registry.py  svadu.py  svadu_scenarios.py
coretp/plans/svinval/: __init__.py  svinval_scenarios.py
coretp/plans/zawrs/: __init__.py  zawrs_scenarios.py
coretp/plans/zcntr/: __init__.py  zcntr_scenarios.py
coretp/plans/zicbom_zicboz_zicbop/: __init__.py  zicbom_zicboz_zicbop_scenarios.py
coretp/plans/zicntr_zihpm_sscounterenw/: __init__.py  (+1 more)
coretp/rv_enums/: __init__.py  arch.py  exception_cause.py  instruction.py  paging.py  privilege.py  register.py
coretp/step/: __init__.py  arithmetic.py  call.py  csr.py  directive.py  hart.py  memory.py  registry.py  step.py
docs/: README.md  build.py
docs/source/: conf.py  index.rst
(+35 files in other folders)
