[tool.black]
line-length = 200
workers = 8
exclude = "/(.git|riscv-dv|riscv-isa-sim|whisper|fpgen|riescue_config|.*_clone|opensrc.*|.*-scripts)/"


[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "riescue"
version = "0.3.4"
description = "RISC-V Directed Test Framework and Compliance Suite"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "dataclasses",
    "sortedcontainers",
    "pyyaml",
    "numpy",
    "pybind11",
    "pyvsc",
    "csrbox",
    "sphinx",
    "sphinx-rtd-theme",
    "flake8",
    "black",
    "intervaltree",
    "coverage",
    "tabulate",
    "pyright",
]

[tool.setuptools.package-dir]
riescue = "riescue/"

[project.scripts]
riescued = "riescue.riescued:main"

[tool.pyright]
include = [
    "riescue/lib",
    "riescue/riescued.py",
    #"riescue/*.py",
    #"riescue/dtest_framework",
    "riescue/dtest_framework/config",
    "tests/dtest_framework",

]
extraPaths = ["riescue",]
exclude = [
    "tests/compliance",
    "riescue/lib/csr_manager",
    "riescue/lib/instr_info",
]
pythonVersion = "3.9"
pythonPlatform = "Linux"