[tool.black]
line-length = 200
workers = 8
exclude = "/(.git)/"


[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "coretp"
version = "0.1.0"
description = "RISC-V Core Test Plan "
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    # Code dependencies
    "reportlab", # For PDF export
    "openpyxl", # For Excel export

    # Documentation

    # Lint
    "flake8",
    "black",
    "coverage",
    "pyright[nodejs]",
]

[tool.setuptools.package-dir]
coretp = "coretp/"

[project.scripts]
coretp-export = "rv_core_test_plan.coretp.coretp_export:main"

[tool.pyright]
include = [
    "coretp",

]
extraPaths = ["coretp",]
pythonVersion = "3.9"
pythonPlatform = "Linux"